Correct frontend comment grid alignment

--- a/mediaplex/public/styles/comments.css
+++ b/mediaplex/public/styles/comments.css
@@ -1,7 +1,7 @@
 .comments {
 	width: 481px;
 	padding: 0 20px 0 12px;
-	margin-top: -28px;
+	margin: -28px 0 0 7px;
 }
 .comments h2 {
 	font: 30px 'Times New Roman', serif;
